# edk2-rs-thing

./: .gitignore  Cargo.toml  LICENSE  PROJECT_COMPLETION_PLAN.md  TESTING.md  TESTING_GUIDE.md  run_qemu_tests.bat  run_qemu_tests.sh
uefi-rust-intergration/: ARCHITECTURE.md  BUILD.md  CLAUDE.md  COMPLETE_GUIDE.md  COMPLETION_SUMMARY.md  Cargo.toml  FINAL_STATUS.md  IMPLEMENTATION_STATUS.md  PROJECT_100_PERCENT.md  PROJECT_COMPLETE.md  README.md  TEST_COVERAGE_REPORT.md  TEST_PLAN.md  TEST_RESULTS.md
uefi-rust-intergration/.cargo/: config.toml
uefi-rust-intergration/.github/: BRANCH_PROTECTION.md
uefi-rust-intergration/.github/workflows/: ci.yml  pr.yml
uefi-rust-intergration/examples/: firmware_info.rs  graphics_demo.rs  network_client.rs
uefi-rust-intergration/src/: allocator.rs  guid.rs  intrinsics.rs  lib.rs  logger.rs  panic_handler.rs  string.rs  system_table.rs
uefi-rust-intergration/src/boot_services/: events.rs  mod.rs  safe_wrappers.rs  tpl.rs
uefi-rust-intergration/src/ffi/: mod.rs  status.rs  table_header.rs  types.rs
uefi-rust-intergration/src/graphics/: bmp.rs  mod.rs
uefi-rust-intergration/src/protocols/: block_io.rs  device_path.rs  driver_binding.rs  firmware_management.rs  graphics_output.rs  (+18 more)
uefi-rust-intergration/tests/: README.md  allocator_tests.rs  boot_services_tests.rs  graphics_tests.rs  integration_tests.rs  mock_environment.rs  mock_uefi.rs  network_tests.rs  property_tests.rs  protocol_tests.rs  qemu_runner.rs  qemu_tests.rs  runtime_services_tests.rs  security_tests.rs  services_tests.rs  storage_tests.rs  table_tests.rs
(+55 files in other folders)
