[package]
name = "uefi-rust-intergration"
version = "0.1.0"
edition = "2021"
license = "BSD-2-Clause-Patent"

[lib]
crate-type = ["staticlib", "rlib"]

[[bin]]
name = "uefi-app"
path = "src/bin/main.rs"
test = false

[[bin]]
name = "hello-protocols"
path = "src/bin/hello_protocols.rs"
test = false

[features]
default = []
std = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = "z"

[dependencies]

[dev-dependencies]
